--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </header>
 
       <div id="banner">
-          
+
         <a href="https://github.com/beardedspice/beardedspice" class="button fork"><strong>View On GitHub</strong></a>
         <div class="downloads">
           <span>Downloads:</span>
@@ -45,70 +45,146 @@
 
 <p><a href="images/bs.jpg"><img src="images/bs.jpg" alt="BeardedSpice"></a></p>
 
-<p>BeardedSpice is a menubar application for Mac OSX that allows you to control web based media players with the media keys found on Mac keyboards. It is an extensible application that works with Chrome and Safari, and can control any tab with an applicable media player. BeardedSpice currently supports:</p>
-
+<p>BeardedSpice is a menubar application for Mac OSX that allows you to control
+    web based media players and some native apps with the media keys found on Mac keyboards.
+    It is an extensible application that works with Chrome (Canary, Yandex, Chromium) and Safari,
+    and can control any tab with an applicable media player.</p>
+<h3>
+<a id="setting-an-active-tab" class="anchor" href="#setting-an-active-tab" aria-hidden="true"><span class="octicon octicon-link"></span></a>Supported Mac OS X applications</h3>
 <div id="services">
 <div id="col-left">
 <ul>
-<li><a href="http://8tracks.com">8Tracks</a></li>
-<li><a href="http://22tracks.com">22Tracks</a></li>
-<li><a href="https://amazon.com/gp/dmusic/cloudplayer/player">Amazon Music</a></li>
-<li><a href="http://www.audiomack.com/">AudioMack</a></li>
-<li><a href="http://bandcamp.com">BandCamp</a></li>
-<li><a href="http://listen.beatsmusic.com">BeatsMusic</a></li>
-<li><a href="http://bop.fm">Bop.fm</a></li>
-<li><a href="http://wiki.xbmc.org/index.php?title=Add-on:Chorus">Chorus</a></li>
-<li><a href="http://deezer.com">Deezer</a></li>
-<li><a href="https://www.focusatwill.com">focus@will</a></li>
-<li><a href="https://play.google.com/music/">Google Music</a></li>
-<li><a href="http://grooveshark.com">GrooveShark</a></li>
-<li><a href="http://hypem.com">HypeMachine</a></li>
-<li><a href="http://last.fm">Last.fm</a></li>
-<li><a href="http://mixcloud.com">Mixcloud</a></li>
-<li><a href="https://music.sonyentertainmentnetwork.com">Music Unlimited</a></li>
-<li><a href="http://noadradio.com">NoAdRadio.com</a></li>
-<li><a href="https://overcast.fm">Overcast.fm</a></li>
+    <li><a href="http://www.apple.com/itunes/">iTunes</a></li>
+    <li><a href="https://www.spotify.com/">Spotify</a></li>
+    <li><a href="http://www.videolan.org/vlc/">VLC</a></li>
 </ul>
 </div><div id="col-right">
     <ul>
-<li><a href="http://pandora.com">Pandora</a></li>
-<li><a href="https://play.pocketcasts.com/">Pocket Casts</a></li>
-<li><a href="http://rdio.com">Rdio</a></li>
-<li><a href="http://shuffler.fm/tracks">Shuffler.fm</a></li>
-<li><a href="http://slacker.com">Slacker</a></li>
-<li><a href="http://somafm.com">SomaFM</a></li>
-<li><a href="http://songza.com">Songza</a></li>
-<li><a href="https://soundcloud.com">SoundCloud</a></li>
-<li><a href="https://play.spotify.com">Spotify (Web)</a></li>
-<li><a href="http://www.stitcher.com">STITCHER</a></li>
-<li><a href="http://synology.com">Synology</a></li>
-<li><a href="http://listen.tidalhifi.com/">TIDAL</a></li>
-<li><a href="http://vimeo.com">Vimeo</a></li>
-<li><a href="http://vk.com">VK ("My Music" from vk.com)</a></li>
-<li><a href="http://music.xbox.com">XboxMusic</a></li>
-<li><a href="http://music.yandex.ru">Yandex Music</a></li>
-<li><a href="http://youtube.com">YouTube</a></li>
+    <li><a href="http://coppertino.com/">VOX</a></li>
+    <li><a href="http://downcast.fm/">Downcast</a></li>
+</ul>
+</div>
+</div>
+<h3>
+<a id="setting-an-active-tab" class="anchor" href="#setting-an-active-tab" aria-hidden="true"><span class="octicon octicon-link"></span></a>Supported Sites</h3>
+<div id="services">
+<div id="col-left">
+<ul>
+    <li><a href="http://8tracks.com">8Tracks</a></li>
+    <li><a href="http://22tracks.com">22Tracks</a></li>
+    <li><a href="https://www.amazon.com/gp/dmusic/cloudplayer/player">Amazon Music</a></li>
+    <li><a href="http://www.audible.com/">Audible</a></li>
+    <li><a href="http://www.audiomack.com/">AudioMack</a></li>
+    <li><a href="http://bandcamp.com">BandCamp</a></li>
+    <li><a href="http://www.bbc.co.uk/radio">BBC Radio</a></li>
+    <li><a href="https://beatguide.me/">Beatguide</a></li>
+    <li><a href="https://beatport.com">Beatport</a></li>
+    <li><a href="http://blitzr.com">Blitzr</a></li>
+    <li><a href="http://bop.fm">Bop.fm</a></li>
+    <li><a href="https://brain.fm/">Brain.fm</a></li>
+    <li><a href="http://www.bugs.co.kr">BugsMusic</a></li>
+    <li><a href="http://wiki.xbmc.org/index.php?title=Add-on:Chorus">Chorus</a></li>
+    <li><a href="https://www.coursera.org">Coursera</a></li>
+    <li><a href="https://www.composed.com/">Composed</a></li>
+    <li><a href="https://cozy.io/en/">Cozy Cloud</a> (<a href="https://github.com/cozy-labs/cozy-music">cozy-music application</a>)</li>
+    <li><a href="https://www.dailymotion.com">Dailymotion</a></li>
+    <li><a href="http://deezer.com">Deezer</a></li>
+    <li><a href="http://www.di.fm/">Digitally Imported</a></li>
+    <li><a href="https://www.focusatwill.com">focus@will</a></li>
+    <li><a href="https://play.google.com/music/">Google Music</a></li>
+    <li><a href="http://grooveshark.com">GrooveShark</a></li>
+    <li><a href="http://www.hotnewhiphop.com/mixtapes/">HotNewHipHop Mixtapes</a></li>
+    <li><a href="http://hypem.com">HypeMachine</a></li>
+    <li><a href="http://www.iheart.com/">iHeart Radio</a></li>
+    <li><a href="http://www.indieshuffle.com">IndieShuffle</a></li>
+    <li><a href="http://www.jango.com/">Jango</a></li>
+    <li><a href="https://kollekt.fm/">Kollekt.FM</a></li>
+    <li><a href="http://www.last.fm/">Last.fm</a></li>
+    <li><a href="http://www.letournedisque.com/">Le Tournedisque</a></li>
+    <li><a href="http://listenonrepeat.com/">ListenOnRepeat</a></li>
+    <li><a href="http://www.mysqueezebox.com/">Logitech Media Server (Default web interface only)</a></li>
+    <li><a href="https://www.mixcloud.com/">Mixcloud</a></li>
+    <li><a href="http://musicforprogramming.net/">Music For Programming</a></li>
+    <li><a href="https://music.sonyentertainmentnetwork.com">Music Unlimited</a></li>
+    <li><a href="http://www.netflix.com">Netflix</a></li>
+</ul>
+</div><div id="col-right">
+    <ul>
+        <li><a href="http://www.noadradio.com/">NoAdRadio.com</a></li>
+        <li><a href="http://noonpacific.com">NoonPacific.com</a></li>
+        <li><a href="https://radio.nrk.no/">NRK Radio</a></li>
+        <li><a href="http://ok.ru">Odnoklassniki</a></li>
+        <li><a href="https://overcast.fm">Overcast.fm</a></li>
+        <li><a href="http://www.pandora.com">Pandora</a></li>
+        <li><a href="https://app.plex.tv">Plex Web</a></li>
+        <li><a href="https://play.pocketcasts.com/">Pocket Casts</a></li>
+        <li><a href="https://www.producthunt.com/podcasts/">ProductHunt</a></li>
+        <li><a href="http://player.qobuz.com/">Qobuz</a></li>
+        <li><a href="http://www.radioswissjazz.ch/">Radio Swiss Jazz</a></li>
+        <li><a href="http://rdio.com">Rdio</a></li>
+        <li><a href="http://www.rhapsody.com/">Rhapsody</a></li>
+        <li><a href="http://www.saavn.com/">Saavn</a></li>
+        <li><a href="http://shuffler.fm/">Shuffler.fm</a></li>
+        <li><a href="http://www.slacker.com/">Slacker</a></li>
+        <li><a href="http://somafm.com">SomaFM</a></li>
+        <li><a href="https://soundcloud.com">SoundCloud</a></li>
+        <li><a href="https://play.spotify.com">Spotify (Web)</a></li>
+        <li><a href="http://www.stitcher.com/">STITCHER</a></li>
+        <li><a href="http://play.stylejukebox.com/">Style Jukebox</a></li>
+        <li><a href="http://www.subsonic.org/">Subsonic (personal media streamer)</a></li>
+        <li><a href="http://synology.com">Synology</a></li>
+        <li><a href="http://listen.tidal.com/">TIDAL (Web)</a></li>
+        <li><a href="http://tunein.com/">TuneIn</a></li>
+        <li><a href="http://www.twitch.tv/">Twitch TV</a></li>
+        <li><a href="https://www.udemy.com/">Udemy</a></li>
+        <li><a href="https://vimeo.com/">Vimeo</a></li>
+        <li><a href="https://www.vessel.com/">Vessel</a></li>
+        <li><a href="http://vk.com/">VK ("My Music" from vk.com)</a></li>
+        <li><a href="https://play.watcha.net/">Watcha Play</a></li>
+        <li><a href="http://wonder.fm/">Wonder FM</a></li>
+        <li><a href="http://music.xbox.com">XboxMusic</a></li>
+        <li><a href="https://music.yandex.ru/">Yandex Music</a></li>
+        <li><a href="https://radio.yandex.ru/">Yandex Radio</a></li>
+        <li><a href="https://www.youtube.com/">YouTube</a></li>
+        <li><a href="https://mp3.zing.vn">Zing MP3</a></li>
     </ul>
 </div>
 </div>
 
 <p>If you want another supported app supported, simply open an issue with the tag 'app support'. Or, if you are feeling extra feisty, implement the handler yourself!
-<p>Read about the implementation of the Handler <a href="https://github.com/beardedspice/beardedspice#writing-a-handler">here</a>.</p>
+<p>Read about the implementation of the Handler <a href="https://github.com/beardedspice/beardedspice#writing-a-media-strategy">here</a>.</p>
 
 <h2>
 <a id="features" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Features</h2>
 
 <h3>
-<a id="setting-an-active-tab" class="anchor" href="#setting-an-active-tab" aria-hidden="true"><span class="octicon octicon-link"></span></a>Setting an active tab</h3>
+<a id="setting-an-active-tab" class="anchor" href="#setting-an-active-tab" aria-hidden="true"><span class="octicon octicon-link"></span></a>Smart Mode</h3>
+<p>BeardedSpice tries to automatically guess which tab it should control for you.
+    When you press any media key or BeardedSpice shortcut with BeardedSpice open,
+    it will automatically control the site currently playing media, if you have no playing sites,
+    it will try to control the currently focused tab (if it is one of our supported sites) if BeardedSpice failed to do either,
+    it will automatically control the first.</p>
 
-<p>Tell BeardedSpice to control a tab by either clicking the menubar icon and selecting a tab from the dropdown, or by pressing the 'Set Active Tab' shortcut when a browser window is active. The shortcut defaults to ⌘+F8, and is configurable in the preferences panel. Switching active tabs will pause the currently active tab (if there is one).</p>
+<h3>
+<a id="disabling-certain-handlers" class="anchor" href="#disabling-certain-handlers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Automatic Updates</h3>
+<p>No more checking for new releases on our website, BeardedSpice will automatically notify you when a new release is available.</p>
 
-<p>In Chrome you must reset your active tab if you move your tab to a new window. With Safari, reset your active tab when changing the order of your active tab or moving it to a new window.</p>
+<h3>
+<a id="disabling-certain-handlers" class="anchor" href="#disabling-certain-handlers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Keyboard Shortcuts</h3>
+<p>BeardedSpice comes with a handy list of Keyboard Shortcuts that can be
+    configured under the <b>Shortcuts</b> tab of BeardedSpice Preferences (available through the menubar icon).</p>
+
+<h3>
+<a id="disabling-certain-handlers" class="anchor" href="#disabling-certain-handlers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Multimedia keys of non-Apple keyboards</h3>
+<p>Using a 3rd-party keyboard? Or even a keyboard with no multimedia keys?
+    No problems, BeardedSpice allows you to set your multimedia keys under the shortcuts tab,
+    so you can use any key (or key combination) of your liking.</p>
 
 <h3>
 <a id="disabling-certain-handlers" class="anchor" href="#disabling-certain-handlers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Disabling certain handlers</h3>
 
-<p>From the preferences menu, uncheck any types of webpages that you don't want BeardedSpice to have control over. By default, all implemented handlers are enabled.</p>
+<p>From the preferences tab, uncheck any types of webpages that you don't want BeardedSpice to have control over.
+    By default, all implemented handlers are enabled.</p>
 
 <h1>
 <a id="download" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download</h1>
@@ -117,15 +193,8 @@
 
 <p>Also you can find older releases <a href="https://github.com/beardedspice/beardedspice/tree/releases">here</a>.</p>
 
-<p>Mac OS X 10.8 or greater required.</p>
+<p>Mac OS X 10.9 or greater required.</p>
 
-<h1>
-<a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h1>
-
-<ul>
-<li><a href="https://twitter.com/chedkid">@chedkid</a></li>
-<li><a href="https://twitter.com/trhodeos">@trhodeos</a></li>
-</ul>
       </section>
       <footer>
         <p>Project maintained by <a href="https://github.com/beardedspice">beardedspice</a></p>
