--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 </div>
 </div>
 
-<p>If you want another app supported, simply open an issue with the tag 'app support'. Or, if you are feeling extra feisty, implement the handler yourself!
+<p>If you want another supported app, simply open an issue with the tag 'app support'. Or, if you are feeling extra feisty, implement the handler yourself!
 <p>Read about the implementation of the Handler <a href="https://github.com/beardedspice/beardedspice#writing-a-media-strategy">here</a>.</p>
 
 <h2>
