--- a/html-preview.html
+++ b/html-preview.html
@@ -5,6 +5,7 @@ function load_home (e) {
    (e || window.event).preventDefault();
    var xhr = new XMLHttpRequest();
 
+debugger;
    xhr.onreadystatechange = function (e) {
     if (xhr.readyState == 4 && xhr.status == 200) {
      document.open();
